--- a/teamD.html
+++ b/teamD.html
@@ -1,17 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>湿気対策</title>
-</head>
-<body>
-    <div>
-        <h1>湿気対策について</h1>
-        <ul>
-            <li>こまめな喚起</li>
-            <li>新聞の駆使</li>
-        </ul>
-    </div>
-
-</body>
-</html>
+こまめな喚起
+新聞の駆使
