--- a/teamD.html
+++ b/teamD.html
@@ -1,17 +1,6 @@
---------
-ティッシュをめっちゃ置く
-ビーズのやつ
-火を燃やす
-換気扇
-拭く
---------
-
 湿気対策
-・湿気とるやつ
 ・家具と壁の間にスキーマ
-・エアリズム
-          
-こまめな喚起
-新聞の駆使
-
-jajaja
+・こまめな喚起
+・ティッシュをめっちゃ置く
+・ビーズのやつ
+・火を燃やす
