Revert "湿気対策を五つにまとめる"
This reverts commit 2335ab98597f3e877368d800202bf4d00647ba92.

--- a/teamD.html
+++ b/teamD.html
@@ -1,6 +1,16 @@
+--------
+ティッシュをめっちゃ置く
+ビーズのやつ
+火を燃やす
+換気扇
+拭く
+--------
+
 湿気対策
+・湿気とるやつ
 ・家具と壁の間にスキーマ
-・こまめな喚起
-・ティッシュをめっちゃ置く
-・ビーズのやつ
-・火を燃やす
+・エアリズム
+          
+こまめな喚起
+新聞の駆使
+
